--- a/package.json
+++ b/package.json
@@ -30,17 +30,17 @@
   },
   "homepage": "https://github.com/winkjs/wink-naive-bayes-text-classifier#readme",
   "devDependencies": {
-    "chai": "^4.1.0",
-    "coveralls": "^2.11.15",
-    "docco": "^0.7.0",
-    "eslint": "^4.3.0",
+    "chai": "^4.1.2",
+    "coveralls": "^3.0.0",
+    "docco": "^0.8.0",
+    "eslint": "^4.13.1",
     "istanbul": "^0.4.5",
     "jshint": "^2.9.5",
-    "mocha": "^3.4.2",
-    "mocha-lcov-reporter": "^1.2.0",
-    "wink-nlp-utils": "^1.2.1"
+    "mocha": "^4.0.1",
+    "mocha-lcov-reporter": "^1.3.0"
   },
   "dependencies": {
-    "wink-helpers": "^1.2.0"
+    "wink-helpers": "^1.2.0",
+    "wink-nlp-utils": "^1.7.0"
   }
 }
