--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "Machine Learning",
     "Cross-validation",
     "NLP",
-    "Natural Language Processing"
+    "Natural Language Processing",
+    "AI",
+    "wink"
   ],
   "main": "src/wink-naive-bayes-text-classifier.js",
   "scripts": {
@@ -24,7 +26,7 @@
     "url": "git+https://github.com/winkjs/wink-naive-bayes-text-classifier.git"
   },
   "author": "Sanjaya Kumar Saxena",
-  "license": "AGPL-3.0-only",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/winkjs/wink-naive-bayes-text-classifier/issues"
   },
@@ -34,14 +36,14 @@
     "coveralls": "^3.0.2",
     "docdash": "^1.0.0",
     "docker": "^1.0.0",
-    "eslint": "^5.6.1",
+    "eslint": "^5.8.0",
     "istanbul": "^1.1.0-alpha.1",
     "jsdoc": "^3.5.5",
     "mocha": "^5.2.0",
     "mocha-lcov-reporter": "^1.3.0"
   },
   "dependencies": {
-    "wink-helpers": "^1.5.0",
-    "wink-nlp-utils": "^1.9.1"
+    "wink-helpers": "^2.0.0",
+    "wink-nlp-utils": "^2.0.0"
   }
 }
