--- a/package.json
+++ b/package.json
@@ -15,11 +15,11 @@
   "main": "src/wink-naive-bayes-text-classifier.js",
   "scripts": {
     "pretest": "npm run lint && npm run docs",
-    "test": "istanbul cover _mocha ./test/",
-    "coveralls": "istanbul cover _mocha --report lcovonly -- -R spec && cat ./coverage/lcov.info | coveralls && rm -rf ./coverage",
+    "test": "nyc --reporter=html --reporter=text mocha ./test/",
+    "coverage": "nyc report --reporter=text-lcov | coveralls",
     "sourcedocs": "docker -i src -o ./sourcedocs --sidebar no",
     "docs": "jsdoc src/*.js -c .jsdoc.json",
-    "lint": "eslint ./src/*.js ./test/*.js"
+    "lint": "eslint ./src/*.js ./test/*.js ./runkit/*.js"
   },
   "repository": {
     "type": "git",
@@ -35,12 +35,11 @@
     "chai": "^4.3.6",
     "coveralls": "^3.1.1",
     "docdash": "github:winkjs/docdash",
-    "docker": "^1.0.0",
+    "docker": "^0.2.14",
     "eslint": "^8.26.0",
-    "istanbul": "^1.1.0-alpha.1",
     "jsdoc": "^3.6.11",
     "mocha": "^10.1.0",
-    "mocha-lcov-reporter": "^1.3.0"
+    "nyc": "^15.1.0"
   },
   "dependencies": {
     "wink-helpers": "^2.0.0",
