build(*): change build badge & set coveralls debug false
Co-authored-by: Rachna <rachna@graype.in>

--- a/.github/workflows/coveralls.yml
+++ b/.github/workflows/coveralls.yml
@@ -26,5 +26,5 @@ jobs:
       uses: coverallsapp/github-action@v2
       with:
         format: lcov
-        debug: true
+        debug: false
         allow-empty: false
